# ciz2

./: CMakeLists.txt  README.md  main.c
.github/workflows/: ci.yml
src/dynamic_paral/: CMakeLists.txt  vector_search.c  vector_search.h
src/dynamic_paral/vec_processing/: CMakeLists.txt  vector.c
src/static_cons/: CMakeLists.txt  vector_search.c  vector_search.h
src/static_cons/vec_processing/: CMakeLists.txt  vector.c  vector.h
tests/: CMakeLists.txt  main.cpp  tests.cpp
